# prelude2

./: CMakeLists.txt  header.h  prelude2.c  prelude2.h
include/: opcode.h  plcodegen.h  pldump.h  plengine.h  plinst.h  plmem.h  plparser.h  plregister.h
src/: plcodegen.c  pldump.c  plengine.c  plinst.c  plmem.c  plparser.c  plregister.c
tests/: 01.c  CMakeLists.txt  test.pasm
util/: mem.c  mem.h
